--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        //"ext-scws": ">=0.2.1",
         "illuminate/support": "~5.1"
     },
     "autoload": {
@@ -20,5 +19,5 @@
             "Latrell\\Scws\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
