--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
                 "Latrell\\Scws\\ScwsServiceProvider"
             ],
             "aliases": {
-                "Scws": "Latrell\Scws\Facades\Scws"
+                "Scws": "Latrell\\Scws\\Facades\\Scws"
             }
         }
     },
